[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-game-fake-app-api"
version = "1.0.0"
description = "租房仿真 API 客户端与类型定义，供 Agent 与评测使用"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_game_fake_app_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: 集成测试，需真实服务与 RUN_INTEGRATION=1 BASE_URL USER_ID",
]
